@@ -27,6 +27,7 @@ Added ActorFlag.UserActorPairFiltering
 Targeting SlimDX November 2008 SDK
 Removed Serialization from trunk
 Added Controller and Other to ControllersHit to controlls hit report
+Changed ControllerHitReport to UserControllerHitReport
 
 [0.10.2.0 - 2008-11-15]
 Fixed bug where Fluid.ParticleWriteData would be empty
